tests/snapshots/regression-attribute_cap-polarized_single.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                    = Armageddon
ship/scanStrength                            = 25.200000
ship/passiveShieldEffectiveRechargeRate      = 12.466667
ship/passiveShieldRechargeRate               = 12.466667
ship/ehp                                     = 32037.500000
ship/shieldThermalDamageEffectiveResonance   = 0.250000
ship/shieldKineticDamageEffectiveResonance   = 0.250000
ship/shieldExplosiveDamageEffectiveResonance = 0.250000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.250000
ship/hullKineticDamageEffectiveResonance     = 0.250000
ship/hullExplosiveDamageEffectiveResonance   = 0.250000
ship/hullEmDamageEffectiveResonance          = 0.250000
ship/armorThermalDamageEffectiveResonance    = 0.250000
ship/armorKineticDamageEffectiveResonance    = 0.250000
ship/armorExplosiveDamageEffectiveResonance  = 0.250000
ship/armorEmDamageEffectiveResonance         = 0.250000
ship/shieldEhp                               = 9350.000000
ship/hullEhp                                 = 11000.000000
ship/armorEhp                                = 11687.500000
ship/shieldDamageEffectiveResonance          = 1.000000
ship/hullDamageEffectiveResonance            = 1.000000
ship/armorDamageEffectiveResonance           = 1.000000
ship/powerFree                               = 14625.000000
ship/cpuFree                                 = 652.250000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 80.990783
ship/capacitorPeakDelta                      = 19.020563
ship/capacitorPeakLoad                       = 4.464286
ship/capacitorPeakRecharge                   = 23.484848
ship/alignTime                               = 12.797299
ship/hp                                      = 11000.000000
ship/powerOutput                             = 16875.000000
ship/powerLoad                               = 2250.000000
ship/maxVelocity                             = 125.000000
ship/cpuOutput                               = 687.500000
ship/cpuLoad                                 = 35.250000
ship/rechargeRate                            = 825000.000000
ship/agility                                 = 0.087750
ship/maxTargetRange                          = 103125.000000
ship/scanSpeed                               = 5625.000000
ship/kineticDamageResonance                  = 1.000000
ship/thermalDamageResonance                  = 1.000000
ship/explosiveDamageResonance                = 1.000000
ship/emDamageResonance                       = 1.000000
ship/warpCapacitorNeed                       = 0.000000
ship/scanRadarStrength                       = 25.200000
ship/shieldCapacity                          = 9350.000000
ship/armorHP                                 = 11687.500000
ship/armorEmDamageResonance                  = 1.000000
ship/armorExplosiveDamageResonance           = 1.000000
ship/armorKineticDamageResonance             = 1.000000
ship/armorThermalDamageResonance             = 1.000000
ship/shieldExplosiveDamageResonance          = 1.000000
ship/shieldKineticDamageResonance            = 1.000000
ship/shieldThermalDamageResonance            = 1.000000
ship/maxResearchGangSize                     = 30.000000
ship/shieldRechargeRate                      = 1875000.000000
ship/capacitorCapacity                       = 7750.000000
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = 25.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = 25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 50.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/scanResolution                          = 178.750000
ship/shipBonusAB2                            = 25.000000
ship/advancedAgility                         = 0.750000
ship/jumpDriveConsumptionAmount              = 1000.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.750000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

high_1/type              = Polarized Mega Pulse Laser
high_1/state             = active
high_1/speedWithReload   = 4536.010000
high_1/speedOfReload     = 0.010000
high_1/capacitorPeakLoad = 4.464286
high_1/cycleTime         = 4536.000000
high_1/capacitorNeed     = 20.250000
high_1/power             = 2250.000000
high_1/cpu               = 35.250000
high_1/speed             = 4536.000000
high_1/maxRange          = 25200.000000
high_1/damageMultiplier  = 5.692500
high_1/falloff           = 10000.000000
high_1/trackingSpeed     = 4.851625
high_1/heatDamage        = 0.675000
